objects/copado__Artifact_Dependency__c.object
<CustomObject>
    <fields>
        <fullName>copado__Dependent_Artifact__c</fullName>
        <inlineHelpText>The artifact record which cannot be installed or managed without the depending artifact</inlineHelpText>
        <label>Dependent Artifact</label>
        <referenceTo>copado__Artifact__c</referenceTo>
        <relationshipLabel>Artifact_Dependencies</relationshipLabel>
        <relationshipName>Artifact_Dependencies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Depending_Artifact_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The minumum or exact version of depending artifact. This particular version will be used during version creation and installation operations.</inlineHelpText>
        <label>Depending Artifact Version</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria. Depending version should be selected among the depending artifact&apos;s versions.</errorMessage>
            <filterItems>
                <field>$Source.copado__Depending_Artifact__c</field>
                <operation>equals</operation>
                <valueField>copado__Artifact_Version__c.copado__Artifact__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>copado__Artifact_Version__c</referenceTo>
        <relationshipLabel>Artifact_Dependencies</relationshipLabel>
        <relationshipName>Artifact_Dependencies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Depending_Artifact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The depending package artifact which contains required dependencies for the dependent package&apos;s metadata</inlineHelpText>
        <label>Depending Artifact</label>
        <referenceTo>copado__Artifact__c</referenceTo>
        <relationshipLabel>Artifact_Dependencies (Depending Artifact)</relationshipLabel>
        <relationshipName>Artifact_Dependencies1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Depends_on_the_latest_version__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the latest version of the depending artifact will be used for version creation and installation operations</inlineHelpText>
        <label>Depends on the latest version</label>
        <type>Checkbox</type>
    </fields>
    <label>Artifact Dependency</label>
    <nameField>
        <displayFormat>AD-{00000}</displayFormat>
        <label>Artifact Dependencies Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Artifact_Dependencies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>